[package]
name = "slimqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
mqttbytes = "0.6.0"
bytes = "1.2"
futures = "0.3"
log = "0.4"
pin-project-lite = "0.2"

[dependencies.tokio]
version = "1"
features = ["macros", "time", "sync"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dev-dependencies]
simple_logger = "2.2"
tokio-test = "0.4.2"

[dev-dependencies.tokio]
version = "1"
features = ["full"]